--- a/index.html
+++ b/index.html
@@ -16,54 +16,112 @@
         </header>
         <nav class="menu">
             <ul>
-                <li class="itemMenu"> <a href=""> Inicio</a></li>
-                <li class="itemMenu"><a href=""></a>Kiosco</a></li>
-                <li class="itemMenu"><a href=""></a>Tabaqueria</a></li>
-                <li class="itemMenu"><a href=""></a>Nosotros</a></li>
-                <li class="itemMenu"><a href=""></a>Contacto</a></li>
+                <li class="itemMenu"> <a href="">Inicio</a></li>
+                <li class="itemMenu"><a href="">Kiosco</a></li>
+                <li class="itemMenu"><a href="">Tabaqueria</a></li>
+                <li class="itemMenu"><a href="">Nosotros</a></li>
+                <li class="itemMenu"><a href="">Contacto</a></li>
             </ul>
         </nav>
         <main>
             <section>
                 <h3 class="sectionTitle">Promos del mes</h3>
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <h6>TABAQUERIA</h6>
+                <article>
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="images/tabaqueria/flandria.png" class="d-block w-100" alt="">
+                            <div class="carousel-caption d-none d-md-block">
+                            <h5>Tabacos Flandria</h5>
+                            <p>Tabaco originario de Belgica, en todas sus variantes.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/tabaqueria/libella.png" class="d-block w-100" alt="">
+                            <div class="carousel-caption d-none d-md-block">
+                            <h5>Libella</h5>
+                            <p>Filtros y papelillos, marca originaria de Republica checa.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/tabaqueria/villigerCigarritos.png" class="d-block w-100" alt="">
+                            <div class="carousel-caption d-none d-md-block">
+                            <h5>Cigarritos Villiger</h5>
+                            <p>Cigarritos suizos, para todos los gustos.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/tabaqueria/neosCigarritos.png" class="d-block w-100" alt="">
+                            <div class="carousel-caption d-none d-md-block">
+                            <h5>Cigarritos NEOS</h5>
+                            <p>Cigarritos belgas, grandes y mini, originales y saborizados.</p>
+                            </div>
+                        </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>First slide label</h5>
-                          <p>Some representative placeholder content for the first slide.</p>
+                </article>
+                <h6>KIOSCO</h6>
+                <article>
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Second slide label</h5>
-                          <p>Some representative placeholder content for the second slide.</p>
+                        <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="images/kiosco/turronMani.png" class="d-block w-100" alt="">
+                            <div class="carousel-caption d-none d-md-block">
+                            <h5>Turron arcor clasico</h5>
+                            <p>4 x 3, llevas 4 pagas 3.</p>
+                            </div>
                         </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Third slide label</h5>
-                          <p>Some representative placeholder content for the third slide.</p>
+                        <div class="carousel-item">
+                            <img src="images/kiosco/rocklets.png" class="d-block w-100" alt="">
+                            <div class="carousel-caption d-none d-md-block">
+                            <h5>Rocklets</h5>
+                            <p>40% off en la segunda unidad.</p>
+                            </div>
                         </div>
-                      </div>
+                        <div class="carousel-item">
+                            <img src="images/kiosco/rhodesia.png" class="d-block w-100" alt="">
+                            <div class="carousel-caption d-none d-md-block">
+                            <h5>Rhodesia</h5>
+                            <p>30% off en la segunda unidad.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/kiosco/cadburyFrutilla.png" class="d-block w-100" alt="">
+                            <div class="carousel-caption d-none d-md-block">
+                            <h5>Cadbury de frutilla</h5>
+                            <p>2 x $150 (ahorras $50)</p>
+                            </div>
+                        </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
+                </article>
             </section>
         </main>
         <footer class="footer">
