--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="myStyles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <header>
+        <header class="header">
             <h1 class="title">Mitre Point</h1>
-            <h5>Kiosco y tabaqueria</h5>
+            <h5 class="subtitle">Kiosco y tabaqueria</h5>
         </header>
         <nav class="menu">
-            <ul>
-                <li class="itemMenu"> <a href="">Inicio</a></li>
+            <ul class="flexContainer">
+                <li class="itemMenu"><a href="">Inicio</a></li>
                 <li class="itemMenu"><a href="">Kiosco</a></li>
                 <li class="itemMenu"><a href="">Tabaqueria</a></li>
                 <li class="itemMenu"><a href="">Nosotros</a></li>
                 <li class="itemMenu"><a href="">Contacto</a></li>
             </ul>
         </nav>
-        <main>
+        <main class="main">
             <section>
                 <h3 class="sectionTitle">Promos del mes</h3>
-                <h6>TABAQUERIA</h6>
                 <article>
+                    <h6 class="articleTitle">TABAQUERIA</h6>
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -36,31 +36,31 @@
                         </div>
                         <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="images/tabaqueria/flandria.png" class="d-block w-100" alt="">
+                            <img src="images/tabaqueria/flandria.png" class="carouselImage d-block w-100" alt="">
                             <div class="carousel-caption d-none d-md-block">
-                            <h5>Tabacos Flandria</h5>
-                            <p>Tabaco originario de Belgica, en todas sus variantes.</p>
+                            <h5 class="imageTitle">Tabacos Flandria</h5>
+                            <p class="imageTitle">Tabaco originario de Belgica, en todas sus variantes.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/tabaqueria/libella.png" class="d-block w-100" alt="">
+                            <img src="images/tabaqueria/libella.png" class="carouselImage d-block w-100" alt="">
                             <div class="carousel-caption d-none d-md-block">
-                            <h5>Libella</h5>
-                            <p>Filtros y papelillos, marca originaria de Republica checa.</p>
+                            <h5 class="imageTitle">Libella</h5>
+                            <p class="imageTitle">Filtros y papelillos, marca originaria de Republica checa.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/tabaqueria/villigerCigarritos.png" class="d-block w-100" alt="">
+                            <img src="images/tabaqueria/villigerCigarritos.png" class="carouselImage d-block w-100" alt="">
                             <div class="carousel-caption d-none d-md-block">
-                            <h5>Cigarritos Villiger</h5>
-                            <p>Cigarritos suizos, para todos los gustos.</p>
+                            <h5 class="imageTitle">Cigarritos Villiger</h5>
+                            <p class="imageTitle">Cigarritos suizos, para todos los gustos.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/tabaqueria/neosCigarritos.png" class="d-block w-100" alt="">
+                            <img src="images/tabaqueria/neosCigarritos.png" class="carouselImage d-block w-100" alt="">
                             <div class="carousel-caption d-none d-md-block">
-                            <h5>Cigarritos NEOS</h5>
-                            <p>Cigarritos belgas, grandes y mini, originales y saborizados.</p>
+                            <h5 class="imageTitle">Cigarritos NEOS</h5>
+                            <p class="imageTitle">Cigarritos belgas, grandes y mini, originales y saborizados.</p>
                             </div>
                         </div>
                         </div>
@@ -74,8 +74,8 @@
                         </button>
                     </div>
                 </article>
-                <h6>KIOSCO</h6>
                 <article>
+                    <h6 class="articleTitle">KIOSCO</h6>
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -84,31 +84,31 @@
                         </div>
                         <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="images/kiosco/turronMani.png" class="d-block w-100" alt="">
+                            <img src="images/kiosco/turronMani.png" class="carouselImage d-block w-100" alt="">
                             <div class="carousel-caption d-none d-md-block">
-                            <h5>Turron arcor clasico</h5>
-                            <p>4 x 3, llevas 4 pagas 3.</p>
+                            <h5 class="imageTitle">Turron arcor clasico</h5>
+                            <p class="imageTitle">4 x 3, llevas 4 pagas 3.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/kiosco/rocklets.png" class="d-block w-100" alt="">
+                            <img src="images/kiosco/rocklets.png" class="carouselImage d-block w-100" alt="">
                             <div class="carousel-caption d-none d-md-block">
-                            <h5>Rocklets</h5>
-                            <p>40% off en la segunda unidad.</p>
+                            <h5 class="imageTitle">Rocklets</h5>
+                            <p class="imageTitle">40% off en la segunda unidad.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/kiosco/rhodesia.png" class="d-block w-100" alt="">
+                            <img src="images/kiosco/rhodesia.png" class="carouselImage d-block w-100" alt="">
                             <div class="carousel-caption d-none d-md-block">
-                            <h5>Rhodesia</h5>
-                            <p>30% off en la segunda unidad.</p>
+                            <h5 class="imageTitle">Rhodesia</h5>
+                            <p class="imageTitle">30% off en la segunda unidad.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/kiosco/cadburyFrutilla.png" class="d-block w-100" alt="">
+                            <img src="images/kiosco/cadburyFrutilla.png" class="carouselImage d-block w-100" alt="">
                             <div class="carousel-caption d-none d-md-block">
-                            <h5>Cadbury de frutilla</h5>
-                            <p>2 x $150 (ahorras $50)</p>
+                            <h5 class="imageTitle">Cadbury de frutilla</h5>
+                            <p class="imageTitle">2 x $150 (ahorras $50)</p>
                             </div>
                         </div>
                         </div>
@@ -125,12 +125,10 @@
             </section>
         </main>
         <footer class="footer">
-                <ul>
-                    <li class="itemMenu"><a href=""></a></li>
-                    <li class="itemMenu"><a href=""></a></li>
-                    <li class="itemMenu"><a href=""></a></li>
-                    <li class="itemMenu"><a href=""></a></li>
-                    <li class="itemMenu"><a href=""></a></li>
+                <ul class="flexContainer">
+                    <li class="itemMenu"><a href="">Facebook</a></li>
+                    <li class="itemMenu"><a href="">Instagram</a></li>
+                    <li class="itemMenu"><a href="">What's App</a></li>
                 </ul>
         </footer>
     </div>
